# Advanced-MCP

./: .gitignore  Makefile  README.md
notifications/: README.md  client.py  pyproject.toml  server.py
roots/: .env.example  .gitignore  README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml
roots/core/: chat.py  claude.py  cli.py  cli_chat.py  openai.py  tools.py  video_converter.py
sampling/: README.md  client.py  pyproject.toml  server.py
transport-http/: .gitignore  README.md  main.py  pyproject.toml
utils/: logger.py
